# tonkeeperup

./: .gitignore  AGENTS.MD  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: baselineprofile.yml  beta.yml  build-apk-reusable.yml  cd.yml  claude.yml  debug.yml  maestro-tests.yml  mirror-public-build.yml  mirror-public-push.yml  nightly.yaml  publish.yml  release.yml  uk.yml
apps/signer/: build.gradle.kts  proguard-rules.pro
baselineprofile/main/: build.gradle.kts
buildLogic/: settings.gradle.kts
buildLogic/plugin/: build.gradle.kts
detekt/: detekt.yml
fastlane/: Fastfile
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kmp/async/: build.gradle.kts
kmp/core/: build.gradle.kts
kmp/mvi/: README.md  build.gradle.kts
kmp/ui/: build.gradle.kts
lib/base64/: build.gradle.kts
lib/blockchain/: build.gradle.kts
lib/bus/: build.gradle.kts
lib/emoji/: build.gradle.kts
lib/extensions/: build.gradle.kts
lib/features/: build.gradle.kts
lib/icu/: build.gradle.kts
lib/ledger/: build.gradle.kts
lib/log/: build.gradle.kts
lib/network/: build.gradle.kts
lib/qr/: build.gradle.kts
lib/security/: build.gradle.kts
lib/security/src/main/cpp/: CMakeLists.txt
lib/sqlite/: build.gradle.kts
lib/ur/: build.gradle.kts
maestro_ui_tests/: config.yaml
maestro_ui_tests/.maestro/: config.yaml
maestro_ui_tests/flows/: tests_mapper.yaml
maestro_ui_tests/scripts/: parse_mnemonic.js  (+1 more)
rules/: CHECK.MD  OVERVIEW.MD  REVIEW.MD
tonapi/: build.gradle.kts
(+1593 files in other folders)
